# G-Partitioner

./: CMakeLists.txt
app/: partition.cpp
src/: clustioner.hpp  partition.hpp  partitioner.hpp
